Prevent overlapping `.Post-actions` over `.EventPost` content (#103)

--- a/resources/less/forum/alternateLayout.less
+++ b/resources/less/forum/alternateLayout.less
@@ -178,7 +178,7 @@
   }
 }
 
-.Post-actions {
+.CommentPost .Post-actions {
   width: 100%;
   text-align: right;
 
